--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,140 @@
+/* Start Global Rules */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+:root {
+  --main-color: #F8F9FF;
+  --green-color: #009379;
+  --green-color-alt: #E5F4F2;
+  --white-color: #ffffff;
+  --black-color: #000000;
+  --black-color-alt: #4E4D4D;
+  --black-color-footer: #2D2D2D;
+  --main-transition: 0.5s;
+  --main-padding-top: 120px;
+  --main-padding-bottom: 120px;
+  --main-padding-tablet-top: 100px;
+  --main-padding-tablet-bottom: 100px;
+  --main-padding-mobile-top: 60px;
+  --main-padding-mobile-bottom: 60px;
+  --header-height: 100px;
+  --header-mobile-height: 72px;
+  --line-height: 1.5;
+}
+html {
+  scroll-behavior: smooth;
+}
 body {
+  font-family: "Mulish", sans-serif;
+  background-color: var(--main-color);
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+.container {
+  padding-left: 55px;
+  padding-right: 55px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* Small */
+@media (min-width: 767px) {
+  .container {
+    width: 750px;
+  }
+}
+/* Medium */
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+/* Large */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+/* Small */
+@media (max-width: 767px) {
+  .container {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+/* Medium */
+@media (max-width: 992px) {
+  .container {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+/* End Global Rules */
+
+/* Start Font settings */
+.h-xxl {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 90px;
+}
+.h-xl {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 67px;
+}
+.h-l {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 50px;
+}
+.h-m {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 38px;
+}
+.h-s {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 28px;
+}
+.h-xs {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  /* font-size: 28px; */
+  font-size: 21px;
+}
+.h-xxs {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.b-xl {
+  font-family: "Mulish", sans-serif;
+  font-weight: 400;
+  font-size: 28px;
 }
+.b-l {
+  font-family: "Mulish", sans-serif;
+  font-weight: 400;
+  font-size: 21px;
+}
+.b-m {
+  font-family: "Mulish", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+}
+.b-s {
+  font-family: "Mulish", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+/* End Font settings */
